intermediate langauage concept added

--- a/test.ipynb
+++ b/test.ipynb
@@ -403,16 +403,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "en\n",
-      "['', 'game', 'think', 'I will']\n",
-      "0.5178135633468628\n"
+      "bn\n",
+      "Good job\n",
+      "0.6813348531723022\n"
      ]
     }
    ],
@@ -431,9 +431,10 @@
     "            dic.append(translator.translate(s).src)\n",
     "    dic.sort()\n",
     "    print(max(dic,key=dic.count))\n",
-    "    print([translator.translate(i,dest=max(dic,key=dic.count)).text for i in listOfWords])\n",
-    "    return \" \".join([translator.translate(i,src=max(dic,key=dic.count)).text for i in listOfWords])\n",
-    "print(predict_sentiment(model,getAccuracy(\" game acha tha\")))"
+    "    intermediateLan=translator.translate(mainS,src=max(dic,key=dic.count)).text\n",
+    "    print(translator.translate(intermediateLan).text)\n",
+    "    return translator.translate(intermediateLan).text\n",
+    "print(predict_sentiment(model,getAccuracy(\"bhalo\")))"
    ]
   }
  ],
